--- a/walks/walks/appsettings.json
+++ b/walks/walks/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlServer": "Server=localhost\\SQLEXPRESS;Database=walksDb;Trusted_Connection=True;"
+  }
 }
